# fortivo

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feat-request.md
.github/workflows/: cd.yml  ci.yml
changelogs/: v0.1.0-CDtest2.md
engine/: Cargo.toml
engine/src/: arca.rs  error.rs  fs.rs  lib.rs  serde.rs
engine/src/serde/: deserializer.rs
fortivo-core/: Cargo.toml
fortivo-gui/: Cargo.toml  tauri.conf.json
fortivo-gui/src/: main.rs
fortivo-vault/: Cargo.toml
fortivo-vault/src/: main.rs
fortivo-website/src/: index.html
libfortivo/: Cargo.toml
libfortivo/src/: arca.rs  error.rs  lib.rs
libfortivo/src/features/logging/: mod.rs
libfortivo/src/serde/: mod.rs  serializer.rs
